[metadata]
name = modleepkg
version = 0.0.4
author = Harshita Kukreja
author_email = harshitakukreja8@gmail.com
description = Sentiment Analysis with Transformer
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://www.github.com/harshitakukreja/modleepkg
project_urls =
    Bug Tracker = https://www.github.com/harshitakukreja/modleepkg/issues
    repository = https://www.github.com/harshitakukreja/modleepkg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    transformers>=4.31.0 
    xformers>=0.0.20
[options.packages.find]
where = src
